--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     <img src="../images/transportation/transit.jpg">
       <h3>Travel</h3>
-      <p "`Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.`  "</p>
+      <h4>`Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.`</h4>
     </div>
   </div>
 </body>
