--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="../images/transportation/transit.jpg">
       <h3>Travel</h3>
       <h5>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.</h5>
-
+      <img src="../images/garden.jpg">
     </div>
   </div>
 </body>
