--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h3>Travel</h3>
       <h5>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.</h5>
       <img src="../images/garden.jpg">
+      <h3>Historyl</h3>
     </div>
   </div>
 </body>
